--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,3 +12,6 @@ layout: default
   </div>
 
 </article>
+<script id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
