js for geogebra

--- a/_includes/runjsinpost.html
+++ b/_includes/runjsinpost.html
@@ -9,6 +9,8 @@
 
 <script>
 document.getElementById("demo").innerHTML = Math.random();
+for(var i =0;i<10;i++) 
+   ggbApplet.evalCommand("A_"+i+"=(random()*10,random()*10)");
 </script>
 
 </body>
