--- a/_includes/runjsinpost.html
+++ b/_includes/runjsinpost.html
@@ -9,8 +9,17 @@
 
 <script>
 document.getElementById("demo").innerHTML = Math.random();
-for(var i =0;i<10;i++) 
-   ggbApplet.evalCommand("A_"+i+"=(random()*10,random()*10)");
+
+</script>
+<h2>Redirect to a Webpage</h2>
+<p>The replace() method replaces the current document with a new one:</p>
+
+<button onclick="myFunction()">Go to ggb document</button>
+
+<script>
+function myFunction() {
+  location.replace("https://www.geogebra.org/m/eyustrgm")
+}
 </script>
 
 </body>
