--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,9 +28,10 @@ layout: default
 </article>
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <h1>
-  {% assign topic = site.sections | where: 'short_name', page.topic %}
+  {% assign topic = site.sections | where: 'short_name', page.topic | first %}
   {% if topic %}
-      MarketBack to <a href="{{ topic.url | prepend: site.baseurl }}">{{ topic.short_name }}</a>
+      MarkerBack to <a href="{{ topic.url | prepend: site.baseurl }}">{{ topic.short_name }}</a>
+       new line MarkerBack to <a href="{{ topic.url | prepend: site.baseurl }}">{{ page.topic }}</a>
   {% endif %}
 </h1>
 
